# inkscape

./: .bzrignore  .cvsignore  .gitignore  .snapcraft.yaml  ALL-CODE-IS-IN-THE-BZR-ORIGINAL-BRANCH.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog-0.91  Doxyfile  GPL2.txt  HACKING.de.txt  HACKING.fr.txt  HACKING.it.txt  HACKING.pt_BR.txt  HACKING.txt  INSTALL  Info.plist.in  LGPL2.1.txt  Makefile.am  Makefile.mingw  Makefile.mingw.common  Makefile.mingw.common.old  Makefile.mingw.old  NEWS  README  README.ca.txt  README.de.txt  README.es.txt  README.fr.txt  README.it.txt  README.md  README.osx  README.pt_BR.txt  README.sk.txt  TRANSLATORS  _clang-format  acinclude.m4  astylerc  (+40 more)
doc/: .cvsignore  API  ChangeLog_archive.txt  HACKING.de.txt  HACKING.fr.txt  HACKING.it.txt  HACKING.pt_BR.txt  HACKING.txt  LOGGING.txt  Makefile.am  PDF Feature Matrix.ods  WISHLIST  architecture.txt  extension_system.txt  extension_system.xml  fonts.txt  inkscape-shadow.README  inkscape-uml.dia  keys-html.xsl  keys.README  keys.be.html  keys.de.html  keys.de.xml  keys.el.html  keys.en.html  keys.fr.html  keys.fr.xml  keys.html  keys.ja.html  keys.xml  keys.zh_TW.html  markers_design.txt  nr-filter-interface.txt  refcounting.txt
inkscape-launchpad/: .bzrignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Info.plist.in  Makefile.am  NEWS  README  README.ca.txt  README.de.txt  README.es.txt  README.fr.txt  README.it.txt  README.pt_BR.txt.~1~  README.sk.txt  README.sr.txt  README.sr.txt.~1~  TRANSLATORS  _clang-format  astylerc  build-lx.xml  build-x64-gtk3.xml  build-x64.xml  build.xml  buildtool.cpp  cmake_uninstall.cmake.in  config.h.cmake  configure.ac  configure.bat  download-gtest.bash  generate_POTFILES.sh  inkscape.de.pod  inkscape.desktop.in  inkscape.el.pod  inkscape.fr.pod  inkscape.ico.~1~  inkscape.ja.pod.~1~  inkscape.png.~1~  (+6 more)
inkscape-launchpad/CMakeScripts/: CanonicalizeFlagsVar.cmake  ConfigChecks.cmake  ConfigPaths.cmake  DefineDependsandFlags.cmake  HelperMacros.cmake  IncludeJava.cmake  Pod2man.cmake  cmake_consistency_check.py  cmake_consistency_check_config.py  inkscape-version.cmake
inkscape-launchpad/doc/: ChangeLog_archive.txt  ChangeLog_archive.txt.~1~  HACKING.de.txt  HACKING.fr.txt  HACKING.fr.txt.~1~  HACKING.it.txt  HACKING.pt_BR.txt  HACKING.txt.~1~  Makefile.am  PDF Feature Matrix.ods.~1~  PDF Feature Matrix.svg.~1~  architecture.svg.~1~  class-hierarchy.dia.~1~  extension_system.txt  extension_system.xml  inkscape-uml.dia.~1~  keys.be.html  keys.be.html.~1~  keys.css  keys.de.html  keys.el.html  keys.en.html  keys.en.html.~1~  keys.fr.html  keys.fr.html.~1~  keys.ja.html  keys.zh_TW.html  keys.zh_TW.html.~1~  markers_design.txt
inkscape-launchpad/jenkins/: jenkins-scanbuild.sh
inkscape-launchpad/m4/: Makefile.am
inkscape-launchpad/man/: inkscape.el.pod.in  inkscape.fr.pod.in  inkscape.sk.pod.in
inkscape-launchpad/packaging/: inkscape.16.png.bz2  inkscape.32.png.bz2  inkscape.48.png.bz2  inkscape.48.png.bz2.~1~  release-sign-tarballs
inkscape-launchpad/po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ar.po.~1~  as.po  az.po  az.po.~1~  be.po  be.po.~1~  bg.po  bg.po.~1~  bn.po  bn.po.~1~  bn_BD.po  bn_BD.po.~1~  br.po  brx.po  ca.po  ca@valencia.po  ca@valencia.po.~1~  check-markup  check_for_tutorial_problems.sh  cs.po  da.po  de.po  de.po.~1~  doi.po  dz.po  dz.po.~1~  el.po  en_AU.po  en_CA.po  en_GB.po  en_GB.po.~1~  en_US@piglatin.po  eo.po  es.po  (+94 more)
inkscape-launchpad/share/: README  README.~1~
inkscape-launchpad/src/: CMakeLists.txt  Makefile.am  Makefile_insert  PylogFormatter.h  TRPIFormatter.h.~1~  attribute-rel-css.cpp  attribute-rel-svg.h  attribute-rel-util.h  attributes-test.h  attributes.cpp  attributes.h  axis-manip.cpp  box3d-side.cpp  box3d-side.h  box3d.cpp  box3d.h  brokenimage.xpm  check-header-compile.in  cms-color-types.h  cms-system.h  color-profile-cms-fns.h  color-profile-test.h  color-profile.cpp  color-profile.h  color.h  colorspace.h  composite-undo-stack-observer.cpp  composite-undo-stack-observer.h  conn-avoid-ref.cpp  console-output-undo-observer.cpp  console-output-undo-observer.h  context-fns.cpp  context-fns.h  decimal-round.h  desktop-events.cpp  desktop-events.h  desktop-style.cpp  desktop-style.h  desktop.cpp  desktop.h  (+290 more)
inkscape-launchpad/test/: CMakeLists.txt  doc-per-case-test.h
share/: CMakeLists.txt  Makefile.am
share/attributes/: CMakeLists.txt  README  css_defaults  cssprops  genMapDataCSS.pl  genMapDataSVG.pl  svgprops
share/branding/: CMakeLists.txt  Makefile.am  README
share/clipart/: Makefile.am  README  README-ribbon.txt
share/examples/: CMakeLists.txt  Makefile.am  car.svgz  gallardo.svgz  gradient-mesh-experimental.svgz  istest.pov  l-systems.svgz  stars.svgz
share/extensions/: CMakeLists.txt  G2Pngs.inx  G2Pngs.py  Inkscape.pm  Makefile.am  PathData.py  README  SpSVG.pm  addnodes.inx  addnodes.py  ai_input.inx  ai_output.inx  aisvg.inx  aisvg.xslt  bezmisc.py  bluredge.inx  ccx_input.inx  cdr2svg.sh  cdr_input.inx  cdt_input.inx  cgm_input.inx  chardataeffect.py  cmx_input.inx  color_HSL_adjust.inx  color_HSL_adjust.py  color_blackandwhite.inx  color_blackandwhite.py  color_brighter.inx  color_brighter.py  color_custom.inx  color_custom.py  (+408 more)
src/: .cvsignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.mingw  Makefile.mingw.old  Makefile_insert  MultiPrinter.h  PylogFormatter.h  TRPIFormatter.h  approx-equal.h  arc-context.cpp  arc-context.h  attribute-rel-css.cpp  attribute-rel-css.h  attribute-rel-svg.cpp  attribute-rel-svg.h  attribute-rel-util.cpp  attribute-rel-util.h  attribute-sort-util.cpp  attribute-sort-util.h  attributes-test.cpp  attributes-test.h  attributes.cpp  attributes.h  axis-manip.cpp  axis-manip.h  axonomgrid-snapper.cpp  axonomgrid-snapper.h  bad-uri-exception.h  box3d-context.cpp  box3d-context.h  box3d-face.cpp  box3d-face.h  box3d-side.cpp  box3d-side.h  box3d.cpp  box3d.h  brokenimage.xpm  check-header-compile.in  (+600 more)
test/: CMakeLists.txt  doc-per-case-test.cpp  unittest.cpp
testfiles/: CMakeLists.txt  unittest.cpp
(+7173 files in other folders)
